[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/wood.png" type="Texture" id=1]
[ext_resource path="res://scripts/item.gd" type="Script" id=2]
[ext_resource path="res://assets/bridge.png" type="Texture" id=3]
[ext_resource path="res://scripts/bridge.gd" type="Script" id=4]
[ext_resource path="res://scenes/time.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.3407, 15.3874 )

[sub_resource type="Animation" id=2]
resource_name = "burn"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.992157, 0.25098, 0.105882, 1 ), Color( 0.0784314, 0.0784314, 0.0784314, 1 ), Color( 0, 0, 0, 1 ), Color( 0.0784314, 0.0784314, 0.0784314, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.8986, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.1339, 17.2178 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 50, 40 )

[node name="bridge" type="Node2D"]
script = ExtResource( 4 )
Time = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"item",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
position = Vector2( 0, 1.99179 )
z_index = -1
texture = ExtResource( 3 )
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 1.73305, 2.87484 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="StaticBody2D"]
visible = false
position = Vector2( 2.80107, 2.87914 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/burn = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 0.0962791, -23.5885 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -0.0962868, 28.9802 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=[
"target",
]]
position = Vector2( 43.6147, -5.19911 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -0.138374, 6.36527 )
shape = SubResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="." groups=[
"touch",
]]
position = Vector2( 10.2057, 2.79211 )
shape = SubResource( 5 )
shape_centered = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StaticBody2D" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
